# Wizardry-6-reverse-engineering

./: .gitignore  AGENTS.md  EGA_FORMAT_DISCOVERY.md  LICENSE  MAZEDATA_FORMAT.md  PLAN.md  README.md  SCENARIO_DBS_GRAPHIC_SECTION.md  analyze_decoded_atlas.py  analyze_ega_driver.py  analyze_mazedata.py  analyze_mazedata_structure.py  compare_formats.py  create_comparison_image.py  debug_decoder.py  decode_mazedata3.py  decode_mazedata_tiles.py  decoded_msg.txt  dump_palette.py  examine_good_tiles.py  extract_mazedata_images.py  extract_recognizable_patterns.py  find_msg.py  fix_scrambled_tiles.py  fix_tile_shift.py  parse_null_separated.py  parse_offset_table.py  parse_tile_descriptors.py  parse_tile_stream.py  pyproject.toml  search_msg.py  test_all_permutations.py  test_decoder_reference.py  test_rle.py  test_skip_header.py  test_tile_format_hypothesis.py  tmp_pic_eval.py  tmp_pic_header.py  tmp_pic_header_bytes.py  tmp_pic_header_m1.py  (+9 more)
.claude/: settings.local.json
bane/: __init__.py  __main__.py
docs/: BYTE_PATTERN_ANALYSIS.md  CHARACTER_CREATION_EDITOR.md  CHARACTER_ROSTER_EDITOR.md  CHARACTER_ROSTER_EDITOR_UI_REDESIGN.md  COORDINATE_MAPPING_BREAKTHROUGH.md  DUNGEON_RENDERER.md  FEATURE_SYSTEM_DECODED.md  FOUNTAIN_DISCOVERY.md  GRAYSCALE_BREAKTHROUGH.md  HORIZONTAL_WALLS_SOLVED.md  MAP_10_ANALYSIS.md  MAP_FEATURE_FORMAT.md  MAP_FORMAT_DECODED.md  MAZEDATA_FORMAT.md  MAZEDATA_TEXTURE_ORGANIZATION.md  MAZEDATA_TILE_FORMAT.md  MSG_FORMAT_SUMMARY.md  MSG_RE_STAGE2_NOTES.md  PCFILE_EDITOR.md  PCFILE_WPCVW_LOAD_NOTES.md  PIC_EDITOR.md  RACE_DATA_ANALYSIS.md  SCENARIO_DBS_CLASS_CORRELATION.md  SCENARIO_DBS_FINDINGS.md  SCENARIO_DBS_SPELL_DECODING.md  SOUND_PLAYBACK_RE.md  SPELL_SYSTEM_DECODED.md  TEXTURE_DECODING_SUCCESS.md  TILED_PLANAR_ALMOST_CORRECT.md  WALL_DATA_FORMAT.md  WALL_ENCODING_BREAKTHROUGH.md  WALL_ENCODING_COMPLETE.md  WALL_ENCODING_DECODED.md  WALL_ENCODING_FINAL.md  WALL_MAPPING_DATA.md  WALL_ORIENTATION_DECODED.md  WALL_SYSTEM_COMPLETE.md  WMAZE_STITCHING_FINDINGS.md  WROOT_NEWGAME_LOAD_PATH.md  apps-security-review-2026-04-06.md  (+4 more)
file_format_docs/: FULLSCREEN_EGA.md  MAP_NEWGAME_DBS. md  MAP_NEWGAME_DBS.md  MAZEDATA_EGA.md  MONSTER_PIC.md  MSG_DBS.md  PCFILE_DBS.md  SOUND_SND.md  WFONT_EGA.md  WPORT_EGA.md
loaders/: character_creation.py  credits_animation.py  (+11 more)
(+380 files in other folders)
